syntax = "proto3";

package keyhub.app.v1;

import "buf/validate/validate.proto";
import "keyhub/app/v1/common.proto";

service RoomService {
  // テナントに紐づくRoom一覧を取得（Keyを含む）
  rpc GetRoomsByTenant(GetRoomsByTenantRequest) returns (GetRoomsByTenantResponse);
}

message GetRoomsByTenantRequest {
  string tenant_id = 1 [(buf.validate.field).string.uuid = true];
}

message GetRoomsByTenantResponse {
  repeated Room rooms = 1;
}
